--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+body{
+background-color:black;
+}
+
 #unity-container.unity-desktop{
     width: 100%;
     height: 99%;
@@ -16,3 +20,14 @@ background: black;
 height: 100%;
 }
 
+
+.hide {
+    display: none;
+}
+#pregame{
+    text-align: center;
+    vertical-align: middle;
+    color:white;
+    line-height: 50px;
+    margin-top: 10%;
+}
